syntax = "proto3";

package grpc;

option go_package = "github.com/spelens-gud/trunk/internal/net/grpc";

// Echo 服务
service TestService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}

// Echo 请求
message EchoRequest {
  string message = 1;
}

// Echo 响应
message EchoResponse {
  string message = 1;
}
