package grpc

import (
	"fmt"
	"net"
	"sync"
	"sync/atomic"
	"testing"
	"time"

	"context"

	"github.com/spelens-gud/logger"
	"github.com/spelens-gud/trunk/internal/net/message"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

//go:generate protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative test.proto

// waitForPort ç­‰å¾…ç«¯å£å¯ç”¨
func waitForPort(port int, timeout time.Duration) bool {
	deadline := time.Now().Add(timeout)
	for time.Now().Before(deadline) {
		conn, err := net.DialTimeout("tcp", fmt.Sprintf("127.0.0.1:%d", port), 100*time.Millisecond)
		if err == nil {
			conn.Close()
			return true
		}
		time.Sleep(50 * time.Millisecond)
	}
	return false
}

// TestServiceImpl æµ‹è¯•æœåŠ¡å®ç°ï¼ˆä½¿ç”¨ message æ¨¡å—ï¼‰
type TestServiceImpl struct {
	UnimplementedTestServiceServer
	receivedMessages []string
	mu               sync.Mutex
	codec            message.Codec[*EchoRequest]
	respCodec        message.Codec[*EchoResponse]
}

// Echo å®ç°å›æ˜¾æ–¹æ³•ï¼ˆä½¿ç”¨ message æ¨¡å—è¿›è¡Œç¼–è§£ç ï¼‰
func (s *TestServiceImpl) Echo(ctx context.Context, req *EchoRequest) (*EchoResponse, error) {
	// ä½¿ç”¨ message æ¨¡å—åŒ…è£…è¯·æ±‚
	reqMsg := message.NewMessage(s.codec, 1001, 2001, 3001)
	reqMsg.SetBody(req)

	// ç¼–ç è¯·æ±‚ï¼ˆæ¨¡æ‹Ÿæ¶ˆæ¯ä¼ è¾“ï¼‰
	encodedReq, err := reqMsg.Encode()
	if err != nil {
		return nil, fmt.Errorf("ç¼–ç è¯·æ±‚å¤±è´¥: %w", err)
	}

	// è§£ç è¯·æ±‚ï¼ˆæ¨¡æ‹Ÿæ¥æ”¶æ¶ˆæ¯ï¼‰
	decodedReqMsg := message.NewMessage(s.codec, 0, 0, 0)
	if err := decodedReqMsg.Decode(encodedReq); err != nil {
		return nil, fmt.Errorf("è§£ç è¯·æ±‚å¤±è´¥: %w", err)
	}

	decodedReq := decodedReqMsg.GetBody()

	s.mu.Lock()
	s.receivedMessages = append(s.receivedMessages, decodedReq.Message)
	s.mu.Unlock()

	// åˆ›å»ºå“åº”æ¶ˆæ¯
	respMsg := message.NewMessage(s.respCodec, 1001, 2001, 3002)
	respMsg.SetBody(&EchoResponse{Message: decodedReq.Message})

	// ç¼–ç å“åº”
	encodedResp, err := respMsg.Encode()
	if err != nil {
		return nil, fmt.Errorf("ç¼–ç å“åº”å¤±è´¥: %w", err)
	}

	// è§£ç å“åº”ï¼ˆæ¨¡æ‹Ÿå®¢æˆ·ç«¯æ¥æ”¶ï¼‰
	decodedRespMsg := message.NewMessage(s.respCodec, 0, 0, 0)
	if err := decodedRespMsg.Decode(encodedResp); err != nil {
		return nil, fmt.Errorf("è§£ç å“åº”å¤±è´¥: %w", err)
	}

	resp := decodedRespMsg.GetBody()
	return resp, nil
}

// GetReceivedMessages è·å–æ¥æ”¶åˆ°çš„æ¶ˆæ¯
func (s *TestServiceImpl) GetReceivedMessages() []string {
	s.mu.Lock()
	defer s.mu.Unlock()
	messages := make([]string, len(s.receivedMessages))
	copy(messages, s.receivedMessages)
	return messages
}

// TestIntegration_ServerClientCommunication é›†æˆæµ‹è¯•ï¼šæœåŠ¡å™¨ä¸å®¢æˆ·ç«¯é€šä¿¡
func TestIntegration_ServerClientCommunication(t *testing.T) {
	if testing.Short() {
		t.Skip("è·³è¿‡é›†æˆæµ‹è¯•")
	}

	port := 60000
	log, _ := logger.NewLogger(&logger.Config{
		Level:   "info",
		Console: true,
	})

	// åˆ›å»ºå¹¶å¯åŠ¨æœåŠ¡å™¨
	serverConfig := &ServerConfig{
		Name:                 "integration-server",
		Ip:                   "127.0.0.1",
		Port:                 port,
		MaxConnections:       10,
		MaxConcurrentStreams: 100,
		KeepAliveTime:        10 * time.Second,
		KeepAliveTimeout:     3 * time.Second,
		MaxConnectionAge:     0, // ä¸é™åˆ¶è¿æ¥æ—¶é•¿
	}

	server := &NetGrpcServer{
		cnf: serverConfig,
		log: log,
	}

	server.New()

	// æ³¨å†Œæµ‹è¯•æœåŠ¡ï¼ˆä½¿ç”¨ Protobuf ç¼–è§£ç å™¨ï¼‰
	testService := &TestServiceImpl{
		receivedMessages: make([]string, 0),
		codec:            message.NewProtobufCodec[*EchoRequest](),
		respCodec:        message.NewProtobufCodec[*EchoResponse](),
	}
	RegisterTestServiceServer(server.GetServer(), testService)

	// å¯åŠ¨æœåŠ¡å™¨
	go func() {
		if err := server.Start(); err != nil {
			t.Logf("æœåŠ¡å™¨å¯åŠ¨é”™è¯¯: %v", err)
		}
	}()

	// ç­‰å¾…æœåŠ¡å™¨ç«¯å£å¯ç”¨
	if !waitForPort(port, 5*time.Second) {
		t.Fatal("æœåŠ¡å™¨å¯åŠ¨è¶…æ—¶")
	}

	// é¢å¤–ç­‰å¾…ç¡®ä¿æœåŠ¡å™¨å®Œå…¨å°±ç»ª
	time.Sleep(1 * time.Second)

	t.Log("æœåŠ¡å™¨ç«¯å£å·²å°±ç»ª")

	// åˆ›å»º gRPC å®¢æˆ·ç«¯è¿æ¥
	conn, err := grpc.NewClient(
		fmt.Sprintf("127.0.0.1:%d", port),
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil {
		t.Fatalf("å®¢æˆ·ç«¯è¿æ¥å¤±è´¥: %v", err)
	}
	defer conn.Close()

	// ç­‰å¾…è¿æ¥å°±ç»ª
	time.Sleep(1 * time.Second)

	t.Log("å®¢æˆ·ç«¯è¿æ¥æˆåŠŸ")

	// åˆ›å»ºå®¢æˆ·ç«¯
	client := NewTestServiceClient(conn)

	// å‘é€æµ‹è¯•æ¶ˆæ¯
	ctx := context.Background()
	testMessage := "Hello, gRPC with Message Module!"

	req := &EchoRequest{Message: testMessage}
	resp, err := client.Echo(ctx, req)
	if err != nil {
		t.Fatalf("è°ƒç”¨ Echo æ–¹æ³•å¤±è´¥: %v", err)
	}

	// éªŒè¯å“åº”
	if resp.Message != testMessage {
		t.Errorf("æœŸæœ›æ”¶åˆ° '%s', å®é™…æ”¶åˆ° '%s'", testMessage, resp.Message)
	}

	t.Logf("æˆåŠŸæ”¶åˆ°å“åº”: %s", resp.Message)

	// éªŒè¯æœåŠ¡å™¨æ”¶åˆ°æ¶ˆæ¯
	messages := testService.GetReceivedMessages()
	if len(messages) != 1 {
		t.Errorf("æœŸæœ›æœåŠ¡å™¨æ”¶åˆ° 1 æ¡æ¶ˆæ¯, å®é™…æ”¶åˆ° %d æ¡", len(messages))
	}
	if len(messages) > 0 && messages[0] != testMessage {
		t.Errorf("æœŸæœ›æœåŠ¡å™¨æ”¶åˆ° '%s', å®é™…æ”¶åˆ° '%s'", testMessage, messages[0])
	}

	// æ¸…ç†
	server.Stop()
}

// TestIntegration_MultipleClients é›†æˆæµ‹è¯•ï¼šå¤šå®¢æˆ·ç«¯è¿æ¥
func TestIntegration_MultipleClients(t *testing.T) {
	if testing.Short() {
		t.Skip("è·³è¿‡é›†æˆæµ‹è¯•")
	}

	port := 60001
	log, _ := logger.NewLogger(&logger.Config{
		Level:   "info",
		Console: true,
	})

	// åˆ›å»ºå¹¶å¯åŠ¨æœåŠ¡å™¨
	serverConfig := &ServerConfig{
		Name:                 "multi-client-server",
		Ip:                   "127.0.0.1",
		Port:                 port,
		MaxConnections:       10,
		MaxConcurrentStreams: 100,
		KeepAliveTime:        10 * time.Second,
		KeepAliveTimeout:     3 * time.Second,
		MaxConnectionAge:     0,
	}

	server := &NetGrpcServer{
		cnf: serverConfig,
		log: log,
	}

	server.New()

	// æ³¨å†Œæµ‹è¯•æœåŠ¡
	testService := &TestServiceImpl{
		receivedMessages: make([]string, 0),
		codec:            message.NewProtobufCodec[*EchoRequest](),
		respCodec:        message.NewProtobufCodec[*EchoResponse](),
	}
	RegisterTestServiceServer(server.GetServer(), testService)

	// å¯åŠ¨æœåŠ¡å™¨
	go func() {
		if err := server.Start(); err != nil {
			t.Logf("æœåŠ¡å™¨å¯åŠ¨é”™è¯¯: %v", err)
		}
	}()

	time.Sleep(1 * time.Second)

	// åˆ›å»ºå¤šä¸ªå®¢æˆ·ç«¯
	clientCount := 5
	var wg sync.WaitGroup
	wg.Add(clientCount)

	for i := range clientCount {
		go func(id int) {
			defer wg.Done()

			// åˆ›å»ºå®¢æˆ·ç«¯è¿æ¥
			conn, err := grpc.NewClient(
				fmt.Sprintf("127.0.0.1:%d", port),
				grpc.WithTransportCredentials(insecure.NewCredentials()),
			)
			if err != nil {
				t.Errorf("å®¢æˆ·ç«¯ %d è¿æ¥å¤±è´¥: %v", id, err)
				return
			}
			defer conn.Close()

			client := NewTestServiceClient(conn)

			// å‘é€æ¶ˆæ¯
			ctx := context.Background()
			req := &EchoRequest{Message: fmt.Sprintf("Message from client %d", id)}

			resp, err := client.Echo(ctx, req)
			if err != nil {
				t.Errorf("å®¢æˆ·ç«¯ %d è°ƒç”¨å¤±è´¥: %v", id, err)
				return
			}

			if resp.Message != req.Message {
				t.Errorf("å®¢æˆ·ç«¯ %d: æœŸæœ› '%s', å®é™… '%s'", id, req.Message, resp.Message)
			}

			t.Logf("å®¢æˆ·ç«¯ %d æˆåŠŸæ”¶åˆ°å“åº”: %s", id, resp.Message)
		}(i)
	}

	wg.Wait()

	// éªŒè¯æœåŠ¡å™¨æ”¶åˆ°æ‰€æœ‰æ¶ˆæ¯
	messages := testService.GetReceivedMessages()
	if len(messages) != clientCount {
		t.Errorf("æœŸæœ›æœåŠ¡å™¨æ”¶åˆ° %d æ¡æ¶ˆæ¯, å®é™…æ”¶åˆ° %d æ¡", clientCount, len(messages))
	}

	t.Logf("æœåŠ¡å™¨æ€»å…±æ”¶åˆ° %d æ¡æ¶ˆæ¯", len(messages))

	// æ¸…ç†
	server.Stop()
}

// TestIntegration_ConcurrentRequests é›†æˆæµ‹è¯•ï¼šå¹¶å‘è¯·æ±‚
func TestIntegration_ConcurrentRequests(t *testing.T) {
	if testing.Short() {
		t.Skip("è·³è¿‡é›†æˆæµ‹è¯•")
	}

	port := 60002
	log, _ := logger.NewLogger(&logger.Config{
		Level:   "info",
		Console: true,
	})

	// åˆ›å»ºå¹¶å¯åŠ¨æœåŠ¡å™¨
	serverConfig := &ServerConfig{
		Name:                 "concurrent-server",
		Ip:                   "127.0.0.1",
		Port:                 port,
		MaxConnections:       100,
		MaxConcurrentStreams: 100,
		KeepAliveTime:        10 * time.Second,
		KeepAliveTimeout:     3 * time.Second,
		MaxConnectionAge:     0,
	}

	server := &NetGrpcServer{
		cnf: serverConfig,
		log: log,
	}

	server.New()

	// æ³¨å†Œæµ‹è¯•æœåŠ¡
	testService := &TestServiceImpl{
		receivedMessages: make([]string, 0),
		codec:            message.NewProtobufCodec[*EchoRequest](),
		respCodec:        message.NewProtobufCodec[*EchoResponse](),
	}
	RegisterTestServiceServer(server.GetServer(), testService)

	// å¯åŠ¨æœåŠ¡å™¨
	go func() {
		if err := server.Start(); err != nil {
			t.Logf("æœåŠ¡å™¨å¯åŠ¨é”™è¯¯: %v", err)
		}
	}()

	time.Sleep(1 * time.Second)

	// åˆ›å»ºå®¢æˆ·ç«¯è¿æ¥
	conn, err := grpc.NewClient(
		fmt.Sprintf("127.0.0.1:%d", port),
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil {
		t.Fatalf("å®¢æˆ·ç«¯è¿æ¥å¤±è´¥: %v", err)
	}
	defer conn.Close()

	client := NewTestServiceClient(conn)

	// å¹¶å‘å‘é€è¯·æ±‚
	concurrency := 50
	var wg sync.WaitGroup
	var successCount, failCount int32

	wg.Add(concurrency)
	start := time.Now()

	for i := range concurrency {
		go func(id int) {
			defer wg.Done()

			ctx := context.Background()
			req := &EchoRequest{Message: fmt.Sprintf("Concurrent message %d", id)}

			resp, err := client.Echo(ctx, req)
			if err != nil {
				atomic.AddInt32(&failCount, 1)
				t.Logf("è¯·æ±‚ %d å¤±è´¥: %v", id, err)
			} else {
				atomic.AddInt32(&successCount, 1)
				if resp.Message != req.Message {
					t.Errorf("è¯·æ±‚ %d: æœŸæœ› '%s', å®é™… '%s'", id, req.Message, resp.Message)
				}
			}
		}(i)
	}

	wg.Wait()
	elapsed := time.Since(start)

	t.Logf("å¹¶å‘è¯·æ±‚æµ‹è¯•å®Œæˆ:")
	t.Logf("  å¹¶å‘æ•°: %d", concurrency)
	t.Logf("  æˆåŠŸè¯·æ±‚: %d", successCount)
	t.Logf("  å¤±è´¥è¯·æ±‚: %d", failCount)
	t.Logf("  è€—æ—¶: %v", elapsed)
	t.Logf("  å¹³å‡å»¶è¿Ÿ: %v", elapsed/time.Duration(concurrency))

	// éªŒè¯æœåŠ¡å™¨æ”¶åˆ°çš„æ¶ˆæ¯æ•°
	messages := testService.GetReceivedMessages()
	if len(messages) != int(successCount) {
		t.Errorf("æœŸæœ›æœåŠ¡å™¨æ”¶åˆ° %d æ¡æ¶ˆæ¯, å®é™…æ”¶åˆ° %d æ¡", successCount, len(messages))
	}

	// æ¸…ç†
	server.Stop()
}

// TestIntegration_DataTransfer é›†æˆæµ‹è¯•ï¼šæ•°æ®ä¼ è¾“
func TestIntegration_DataTransfer(t *testing.T) {
	if testing.Short() {
		t.Skip("è·³è¿‡é›†æˆæµ‹è¯•")
	}

	port := 60003
	log, _ := logger.NewLogger(&logger.Config{
		Level:   "info",
		Console: true,
	})

	// åˆ›å»ºå¹¶å¯åŠ¨æœåŠ¡å™¨
	serverConfig := &ServerConfig{
		Name:                 "data-transfer-server",
		Ip:                   "127.0.0.1",
		Port:                 port,
		MaxConnections:       10,
		MaxConcurrentStreams: 100,
		KeepAliveTime:        10 * time.Second,
		KeepAliveTimeout:     3 * time.Second,
		MaxConnectionAge:     0,
	}

	server := &NetGrpcServer{
		cnf: serverConfig,
		log: log,
	}

	server.New()

	// æ³¨å†Œæµ‹è¯•æœåŠ¡
	testService := &TestServiceImpl{
		receivedMessages: make([]string, 0),
		codec:            message.NewProtobufCodec[*EchoRequest](),
		respCodec:        message.NewProtobufCodec[*EchoResponse](),
	}
	RegisterTestServiceServer(server.GetServer(), testService)

	// å¯åŠ¨æœåŠ¡å™¨
	go func() {
		if err := server.Start(); err != nil {
			t.Logf("æœåŠ¡å™¨å¯åŠ¨é”™è¯¯: %v", err)
		}
	}()

	time.Sleep(1 * time.Second)

	// åˆ›å»ºå®¢æˆ·ç«¯è¿æ¥
	conn, err := grpc.NewClient(
		fmt.Sprintf("127.0.0.1:%d", port),
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil {
		t.Fatalf("å®¢æˆ·ç«¯è¿æ¥å¤±è´¥: %v", err)
	}
	defer conn.Close()

	client := NewTestServiceClient(conn)

	// æµ‹è¯•ä¸åŒå¤§å°çš„æ•°æ®ä¼ è¾“
	testCases := []struct {
		name    string
		message string
	}{
		{"çŸ­æ¶ˆæ¯", "Hello"},
		{"ä¸­ç­‰æ¶ˆæ¯", "This is a medium length message for testing gRPC communication with message module"},
		{"é•¿æ¶ˆæ¯", string(make([]byte, 1024))}, // 1KB æ•°æ®
		{"ç‰¹æ®Šå­—ç¬¦", "æµ‹è¯•ä¸­æ–‡ ğŸš€ Special chars: !@#$%^&*()"},
		{"ç©ºæ¶ˆæ¯", ""},
	}

	for _, tc := range testCases {
		t.Run(tc.name, func(t *testing.T) {
			ctx := context.Background()
			req := &EchoRequest{Message: tc.message}

			resp, err := client.Echo(ctx, req)
			if err != nil {
				t.Fatalf("è°ƒç”¨å¤±è´¥: %v", err)
			}

			if resp.Message != tc.message {
				t.Errorf("æ•°æ®ä¸åŒ¹é…: æœŸæœ›é•¿åº¦ %d, å®é™…é•¿åº¦ %d",
					len(tc.message), len(resp.Message))
			}

			t.Logf("æˆåŠŸä¼ è¾“ %d å­—èŠ‚æ•°æ®", len(tc.message))
		})
	}

	// æ¸…ç†
	server.Stop()
}

// TestIntegration_HighThroughput é›†æˆæµ‹è¯•ï¼šé«˜ååé‡
func TestIntegration_HighThroughput(t *testing.T) {
	if testing.Short() {
		t.Skip("è·³è¿‡é›†æˆæµ‹è¯•")
	}

	port := 60005
	log, _ := logger.NewLogger(&logger.Config{
		Level:   "info",
		Console: true,
	})

	// åˆ›å»ºå¹¶å¯åŠ¨æœåŠ¡å™¨
	serverConfig := &ServerConfig{
		Name:                 "throughput-server",
		Ip:                   "127.0.0.1",
		Port:                 port,
		MaxConnections:       100,
		MaxConcurrentStreams: 100,
		KeepAliveTime:        10 * time.Second,
		KeepAliveTimeout:     3 * time.Second,
		MaxConnectionAge:     0,
	}

	server := &NetGrpcServer{
		cnf: serverConfig,
		log: log,
	}

	server.New()

	// æ³¨å†Œæµ‹è¯•æœåŠ¡
	testService := &TestServiceImpl{
		receivedMessages: make([]string, 0),
		codec:            message.NewProtobufCodec[*EchoRequest](),
		respCodec:        message.NewProtobufCodec[*EchoResponse](),
	}
	RegisterTestServiceServer(server.GetServer(), testService)

	// å¯åŠ¨æœåŠ¡å™¨
	go func() {
		if err := server.Start(); err != nil {
			t.Logf("æœåŠ¡å™¨å¯åŠ¨é”™è¯¯: %v", err)
		}
	}()

	time.Sleep(1 * time.Second)

	// åˆ›å»ºå¤šä¸ªå®¢æˆ·ç«¯è¿æ¥
	clientCount := 10
	requestsPerClient := 100

	var wg sync.WaitGroup
	var totalSuccess int32

	start := time.Now()

	for i := range clientCount {
		wg.Add(1)
		go func(clientID int) {
			defer wg.Done()

			// åˆ›å»ºå®¢æˆ·ç«¯è¿æ¥
			conn, err := grpc.NewClient(
				fmt.Sprintf("127.0.0.1:%d", port),
				grpc.WithTransportCredentials(insecure.NewCredentials()),
			)
			if err != nil {
				t.Errorf("å®¢æˆ·ç«¯ %d è¿æ¥å¤±è´¥: %v", clientID, err)
				return
			}
			defer conn.Close()

			client := NewTestServiceClient(conn)

			// å‘é€å¤šä¸ªè¯·æ±‚
			for j := range requestsPerClient {
				ctx := context.Background()
				req := &EchoRequest{Message: fmt.Sprintf("Client %d - Request %d", clientID, j)}

				resp, err := client.Echo(ctx, req)
				if err == nil && resp.Message == req.Message {
					atomic.AddInt32(&totalSuccess, 1)
				}
			}
		}(i)
	}

	wg.Wait()
	elapsed := time.Since(start)

	totalRequests := clientCount * requestsPerClient
	throughput := float64(totalSuccess) / elapsed.Seconds()

	t.Logf("é«˜ååé‡æµ‹è¯•å®Œæˆ:")
	t.Logf("  å®¢æˆ·ç«¯æ•°: %d", clientCount)
	t.Logf("  æ¯å®¢æˆ·ç«¯è¯·æ±‚æ•°: %d", requestsPerClient)
	t.Logf("  æ€»è¯·æ±‚æ•°: %d", totalRequests)
	t.Logf("  æˆåŠŸè¯·æ±‚æ•°: %d", totalSuccess)
	t.Logf("  è€—æ—¶: %v", elapsed)
	t.Logf("  ååé‡: %.2f requests/s", throughput)

	if totalSuccess < int32(totalRequests*9/10) {
		t.Errorf("æˆåŠŸç‡è¿‡ä½: %d/%d (%.2f%%)",
			totalSuccess, totalRequests, float64(totalSuccess)/float64(totalRequests)*100)
	}

	// æ¸…ç†
	server.Stop()
}
